<?xml version="1.0" encoding="utf-8"?>
<ExtensionInfo
    id="heartkaroo"
    displayName="@string/extension_name"
    icon="@drawable/ic_hrv"
    scansDevices="true"
    fitFile="true">

    <DataType
        typeId="decoupling"
        displayName="@string/decoupling_name"
        description="@string/decoupling_description"
        graphical="false"
        sampleRate="1000"
        unitName="%" />

    <DataType
        typeId="hrv_rmssd"
        displayName="@string/hrv_rmssd_name"
        description="@string/hrv_rmssd_description"
        graphical="false"
        icon="@drawable/ic_hrv" />

    <DataType
        typeId="hrv_stress"
        displayName="@string/hrv_stress_name"
        description="@string/hrv_stress_description"
        graphical="false"
        unitName="%"
        icon="@drawable/ic_hrv" />

    <DataType
        typeId="dfa_alpha1"
        displayName="@string/dfa_alpha1_name"
        description="@string/dfa_alpha1_description"
        graphical="false"
        icon="@drawable/ic_hrv" />

</ExtensionInfo>
